--- a/db/views/index.ejs
+++ b/db/views/index.ejs
@@ -15,7 +15,7 @@
     }
      function Search() {
         var address = document.getElementsByName('suserid')[0].value;
-        window.location.href = "/?address=" + userid;;
+        window.location.href = "/?user=" + address;;
     }
     </script>  
 </head>
